fix checkbox label alignment/size and made sure .textarea based off .field

--- a/src/form.css
+++ b/src/form.css
@@ -1,6 +1,6 @@
 /* Forms */
 
-.field {
+.field, .textarea {
     font-size: 1em;
     height: 36px;
     width: 100%;
@@ -19,7 +19,10 @@
 
 .field[type="checkbox"],
 .field[type="radio"] {
-    display: inline;
+    position: relative;
+    bottom: -3px;
+    height: 16px;
+    width: 16px;
 }
 
 .field:hover, .textarea:hover {
